--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@ body
 {
     color: #333;
     text-align: center;
-    font-family: "Courier";
+    font-family: "arial";
     font-size: 32px;
     margin: 0;
     padding: 0;
